@@ -168,7 +168,7 @@ let tests =
       "(10)" >:: (fun _ -> assert_raises (BoundedInt.IntegerError "integer overflow")
                      (fun () -> get_token Strictlexer.token "2147483648")) ;
       "(11)" >:: (fun _ -> check_token "-2147483648" Strictlexer.token
-                    (INT ((BoundedInt.of_int64 (-2147483648L)), ~:0))) ;
+                     (INT ((BoundedInt.of_int64 (-2147483648L)), ~:0))) ;
 
       (* +- (2^31 + 1) *)
       "(12)" >:: (fun _ -> assert_raises (BoundedInt.IntegerError "integer overflow")
